=== HEAD

* Make bin/sequel accept file arguments and work correctly when $stdin is not a tty (jeremyevans)

* Add support for -I and -r options to bin/sequel (jeremyevans)

* Sequel::Model.plugin can now be overridden just like the other Model methods (jeremyevans)

* Add tinytds adapter, the best way to connect to MSSQL from a C based ruby running on *nix (jeremyevans)

* Recognize bigint unsigned as a Bignum type in the schema dumper (gamespy-tech) (#327)

* Add Dataset#calc_found_rows for MySQL datasets (macks)

* Add association_autoreloading plugin for clearing association cache when foreign key value changes (jfirebaugh, jeremyevans)

* Fix join_table on MySQL ignoring the block (jfirebaugh)

* Transfer CTE WITH clauses in subselect to main query when joining on MSSQL (jfirebaugh)

* Make specs support both RSpec 1 and RSpec 2 (jeremyevans)

* Work with ruby-informix versions >= 0.7.3 in the informix adapter (jeremyevans) (#326)

=== 3.20.0 (2011-02-01)

* Allow a :partial option to Database#indexes on MySQL to include partial indexes (roland.swingler) (#324)

* Add a SQLite subadapter to the swift adapter, now that swift supports it (jeremyevans)

* Update swift adapter to support swift 0.8.1, older versions no longer supported (jeremyevans)

* Allow setting arbitrary JDBC properties in the jdbc adapter with the :jdbc_properties option (jeremyevans)

* Use a better error message if a validates_max_length validation is applied to a nil value (jeremyevans) (#322)

* Add some basic Microsoft Access support to the ado adapter, autoincrementing primary keys now work (jeremyevans)

* Make class_table_inheritance plugin handle subclass associations better (jeremyevans) (#320)

=== 3.19.0 (2011-01-03)

* Handle Date and DateTime types in prepared statements when using the jdbc adapter (jeremyevans)

* Handle Date, DateTime, Time, SQL::Blob, true, and false in prepared statements when using the SQLite adapter (jeremyevans)
